Improved the menu layout

--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -1,51 +1,103 @@
-#u361-3
+#u459
 {
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #000000;
-	opacity: 0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-	filter: alpha(opacity=50);
-	font-size: 12px;
-	line-height: 14px;
+	border-style: none;
+	border-color: transparent;
+	background-color: #EFECD9;
+	background-color: rgba(231, 226, 198, 0.65);
+	position: relative;
+	-pie-background: rgba(231, 226, 198, 0.65);
+}
+
+#u449
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: #7F91BF;
+	background-color: rgba(59, 87, 157, 0.65);
+	position: relative;
+	-pie-background: rgba(59, 87, 157, 0.65);
+}
+
+#u466-4,#u450-4
+{
+	background-color: transparent;
+	text-align: center;
+	color: #FFFFFF;
+	font-family: double-pica-small-caps, serif;
+	font-weight: 400;
 	position: relative;
 }
 
 #menuu240
 {
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
+	-moz-border-radius: 15px 15px 0px 0px ;
+	-webkit-border-radius: 15px 15px 0px 0px ;
+	-khtml-border-radius: 15px 15px 0px 0px ;
+	border-radius: 15px 15px 0px 0px ;
+	-pie-box-shadow: none;
+	-moz-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
 	position: relative;
 }
 
-#u248,#u251
+._menuu240.f3s_top
 {
-	background-color: transparent;
-	position: relative;
+	background-image: url("../images/menuu240-sprite.png");
+	overflow: hidden;
+	background-position: left top;
 }
 
-#u253-4
+._menuu240.f3s_mid
 {
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 36px;
-	font-size: 30px;
-	text-align: center;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
+	background-image: url("../images/menuu240-sprite.png");
+	overflow: visible;
+	background-position: -806px top;
 }
 
-#u241,#u244
+._menuu240.f3s_bot
 {
-	background-color: transparent;
-	position: relative;
+	background-image: url("../images/menuu240-sprite.png");
+	overflow: visible;
+	background-position: -1612px top;
 }
 
-#u251.MuseMenuActive #u253-4,#u244:hover
+#u251
+{
+	border-style: solid;
+	border-color: #000000;
+	background-color: transparent;
+	position: relative;
+	border-width: 0px 2px 0px 0px;
+}
+
+#u253
+{
+	vertical-align: top;
+	position: relative;
+	background: url("../images/u253.png") no-repeat 0px 0px;
+}
+
+#u251:hover #u253
+{
+	background: url("../images/u253-r.png") no-repeat 0px 0px;
+}
+
+#u251.MuseMenuActive #u253
+{
+	background: url("../images/u253-a.png") no-repeat 0px 0px;
+}
+
+#u244
+{
+	border-style: solid;
+	border-color: #000000;
+	background-color: transparent;
+	position: relative;
+	border-width: 0px 2px 0px 0px;
+}
+
+#u244:hover
 {
 	background-color: transparent;
 }
@@ -61,51 +113,47 @@
 	background-color: transparent;
 }
 
-#u245-4
+#u245
 {
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 36px;
-	font-size: 30px;
-	text-align: center;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	vertical-align: top;
 	position: relative;
+	background: url("../images/u245.png") no-repeat 0px 0px;
 }
 
-#u244:hover #u245-4
+#u244:hover #u245
+{
+	background: url("../images/u245-r.png") no-repeat 0px 0px;
+}
+
+#u244.MuseMenuActive #u245
+{
+	background: url("../images/u245-a.png") no-repeat 0px 0px;
+}
+
+#u242
 {
 	background-color: transparent;
 }
 
-#u244:active #u245-4
+._u243.f3s_top
 {
-	background-color: transparent;
+	background-image: url("../images/u243-sprite.png");
+	overflow: hidden;
+	background-position: left top;
 }
 
-#u247
+._u243.f3s_mid
 {
-	position: relative;
-	background: transparent url("../images/arrowmenudown.gif") no-repeat center center;
+	background-image: url("../images/u243-sprite.png");
+	overflow: visible;
+	background-position: -273px top;
 }
 
-#u244:hover #u247
+._u243.f3s_bot
 {
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-#u244:active #u247
-{
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
-#u244.MuseMenuActive #u247
-{
-	background-repeat: no-repeat;
-	background-position: center center;
+	background-image: url("../images/u243-sprite.png");
+	overflow: visible;
+	background-position: -546px top;
 }
 
 #u333
@@ -113,10 +161,7 @@
 	border-width: 1px;
 	border-style: solid;
 	border-color: #777777;
-	background-color: #000000;
-	opacity: 0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-	filter: alpha(opacity=50);
+	background-color: transparent;
 	position: relative;
 }
 
@@ -125,25 +170,12 @@
 	background-color: #AAAAAA;
 }
 
-#u335-4
-{
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 29px;
-	font-size: 24px;
-	text-align: center;
-	position: relative;
-}
-
 #u345
 {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #777777;
-	background-color: #000000;
-	opacity: 0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-	filter: alpha(opacity=50);
+	background-color: transparent;
 	position: relative;
 }
 
@@ -152,25 +184,12 @@
 	background-color: #AAAAAA;
 }
 
-#u347-4
-{
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 29px;
-	font-size: 24px;
-	text-align: center;
-	position: relative;
-}
-
 #u354
 {
 	border-width: 1px;
 	border-style: solid;
 	border-color: #777777;
-	background-color: #000000;
-	opacity: 0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-	filter: alpha(opacity=50);
+	background-color: transparent;
 	position: relative;
 }
 
@@ -184,36 +203,49 @@
 	background-color: #666666;
 }
 
-#u356-4
+#u480,#u479,#u243,#u335-4,#u347-4,#u356-4
 {
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 29px;
-	font-size: 24px;
-	text-align: center;
 	position: relative;
 }
 
-#u243,#u332,#u344,#u351,#u313,#u314
+#u335-4_clip,#u347-4_clip,#u356-4_clip
 {
-	background-color: transparent;
-	position: relative;
+	overflow: hidden;
+	vertical-align: top;
 }
 
-#u316-4
+#u335-4_img,#u347-4_img,#u356-4_img
 {
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 36px;
-	font-size: 30px;
-	text-align: center;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
+	display: block;
 }
 
-#u275,#u276
+#u314
+{
+	border-style: solid;
+	border-color: #000000;
+	background-color: transparent;
+	position: relative;
+	border-width: 0px 2px 0px 0px;
+}
+
+#u316
+{
+	vertical-align: top;
+	position: relative;
+	background: url("../images/u316.png") no-repeat 0px 0px;
+}
+
+#u314:hover #u316
+{
+	background: url("../images/u316-r.png") no-repeat 0px 0px;
+}
+
+#u314.MuseMenuActive #u316
+{
+	background: url("../images/u316-a.png") no-repeat 0px 0px;
+}
+
+#u460,#u440,#u248,#u241,#u332,#u344,#u351,#u313,#u275,#u276
 {
 	background-color: transparent;
 	position: relative;
@@ -224,32 +256,25 @@
 	border-color: #000000;
 }
 
-#u278-4
+#u278
 {
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	color: #A7272D;
-	line-height: 36px;
-	font-size: 30px;
-	text-align: center;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	vertical-align: top;
 	position: relative;
+	background: url("../images/u278.png") no-repeat 0px 0px;
 }
 
-#u244.MuseMenuActive #u245-4,#u242,#u314.MuseMenuActive #u316-4,#u276.MuseMenuActive #u278-4
+#u276:hover #u278
 {
-	background-color: transparent;
+	background: url("../images/u278-r.png") no-repeat 0px 0px;
+}
+
+#u276.MuseMenuActive #u278
+{
+	background: url("../images/u278-a.png") no-repeat 0px 0px;
 }
 
 .MenuItem /* unifiedNavBar */
 {
 	cursor: pointer;
-}
-
-#u420,#u432
-{
-	background-color: transparent;
-	position: relative;
 }
 
