--- a/css/about-the-author.css
+++ b/css/about-the-author.css
@@ -1,69 +1,67 @@
 .version.about_the_author /* version checker */
 {
-	color: #0000FD;
-	background-color: #9329DF;
+	color: #0000EA;
+	background-color: #0A2951;
 }
 
 .html
 {
-	background: #FFFFFF url("../images/bg.jpg") repeat center center scroll;
+	background-color: #000000;
 }
 
 #page
 {
 	z-index: 1;
-	width: 861px;
-	min-height: 393px;
+	width: 1021px;
+	min-height: 460.85px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 19px 124px 88px 75px;
+	padding: 20px 19px 19.149999999999977px 20px;
 }
 
 #ppu459
 {
 	width: 0.01px;
-	margin-left: 55px;
 }
 
 #pu459
 {
 	width: 0.01px;
 	margin-right: -10000px;
-	margin-left: 173px;
+	margin-left: 170px;
 }
 
 #u459
 {
-	z-index: 2;
+	z-index: 3;
 	width: 150px;
 	margin-right: -10000px;
-	margin-top: 1px;
 }
 
 #u460
 {
-	z-index: 55;
+	z-index: 56;
 	width: 30px;
 	margin-right: -10000px;
 }
 
 #u466-4
 {
-	z-index: 57;
+	z-index: 58;
 	width: 120px;
 	min-height: 7px;
 	margin-right: -10000px;
-	margin-top: 7px;
+	margin-top: 6px;
 	left: 30px;
 }
 
 #u480
 {
-	z-index: 62;
+	z-index: 63;
 	width: 150px;
 	height: 30px;
 	margin-right: -10000px;
@@ -71,33 +69,32 @@
 
 #u449
 {
-	z-index: 3;
+	z-index: 4;
 	width: 150px;
 	padding-bottom: 1px;
 	margin-right: -10000px;
-	margin-top: 1px;
 }
 
 #u440
 {
-	z-index: 49;
+	z-index: 50;
 	width: 29px;
 	margin-right: -10000px;
 }
 
 #u450-4
 {
-	z-index: 51;
+	z-index: 52;
 	width: 121px;
 	min-height: 15px;
 	margin-right: -10000px;
-	margin-top: 7px;
+	margin-top: 6px;
 	left: 29px;
 }
 
 #u479
 {
-	z-index: 61;
+	z-index: 62;
 	width: 150px;
 	height: 30px;
 	margin-right: -10000px;
@@ -112,39 +109,37 @@
 	filter: alpha(opacity=1);
 }
 
+#u481
+{
+	z-index: 2;
+	width: 1020px;
+	padding-bottom: 2px;
+	margin-top: 1px;
+}
+
+#u482
+{
+	z-index: 64;
+	width: 101px;
+	margin-right: -10000px;
+	margin-top: 2px;
+	left: 63px;
+}
+
 #menuu240
 {
-	z-index: 4;
+	z-index: 5;
 	width: 806px;
-	margin-left: 55px;
-	margin-top: 7px;
-}
-
-._menuu240.f3s_top
-{
-	width: 806px;
-	height: 26px;
-}
-
-._menuu240.f3s_mid
-{
-	width: 806px;
-	min-height: 5px;
-}
-
-._menuu240.f3s_bot
-{
-	width: 806px;
-	height: 11px;
+	margin-right: -10000px;
+	margin-top: 61px;
+	left: 214px;
 }
 
 #u248
 {
 	width: 107px;
 	min-height: 42px;
-	margin-bottom: -37px;
 	margin-right: -10000px;
-	top: -26px;
 }
 
 #u251
@@ -180,9 +175,7 @@
 {
 	width: 258px;
 	min-height: 42px;
-	margin-bottom: -37px;
 	margin-right: -10000px;
-	top: -26px;
 	left: 109px;
 }
 
@@ -343,9 +336,7 @@
 {
 	width: 191px;
 	min-height: 42px;
-	margin-bottom: -37px;
 	margin-right: -10000px;
-	top: -26px;
 	left: 369px;
 }
 
@@ -375,9 +366,7 @@
 {
 	width: 244px;
 	min-height: 42px;
-	margin-bottom: -37px;
 	margin-right: -10000px;
-	top: -26px;
 	left: 562px;
 }
 
@@ -403,11 +392,19 @@
 
 #u426
 {
-	z-index: 63;
+	z-index: 67;
 	width: 200px;
 	background-color: transparent;
-	margin-top: 47px;
+	margin-left: 55px;
+	margin-top: 40px;
 	position: relative;
+}
+
+#u488
+{
+	z-index: 66;
+	width: 1019px;
+	height: 41px;
 }
 
 body
