--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -28,38 +28,26 @@
 	position: relative;
 }
 
+#u481
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: #BFBFBF;
+	background-color: rgba(127, 127, 127, 0.5);
+	-moz-border-radius: 10px 0px 0px 0px ;
+	-webkit-border-radius: 10px 0px 0px 0px ;
+	-khtml-border-radius: 10px 0px 0px 0px ;
+	border-radius: 10px 0px 0px 0px ;
+	position: relative;
+	-pie-background: rgba(127, 127, 127, 0.5);
+}
+
 #menuu240
 {
-	-moz-border-radius: 15px 15px 0px 0px ;
-	-webkit-border-radius: 15px 15px 0px 0px ;
-	-khtml-border-radius: 15px 15px 0px 0px ;
-	border-radius: 15px 15px 0px 0px ;
-	-pie-box-shadow: none;
-	-moz-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
-	-webkit-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
-	box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
 	position: relative;
-}
-
-._menuu240.f3s_top
-{
-	background-image: url("../images/menuu240-sprite.png");
-	overflow: hidden;
-	background-position: left top;
-}
-
-._menuu240.f3s_mid
-{
-	background-image: url("../images/menuu240-sprite.png");
-	overflow: visible;
-	background-position: -806px top;
-}
-
-._menuu240.f3s_bot
-{
-	background-image: url("../images/menuu240-sprite.png");
-	overflow: visible;
-	background-position: -1612px top;
 }
 
 #u251
@@ -245,7 +233,7 @@
 	background: url("../images/u316-a.png") no-repeat 0px 0px;
 }
 
-#u460,#u440,#u248,#u241,#u332,#u344,#u351,#u313,#u275,#u276
+#u460,#u440,#u482,#u248,#u241,#u332,#u344,#u351,#u313,#u275,#u276
 {
 	background-color: transparent;
 	position: relative;
@@ -276,5 +264,20 @@
 .MenuItem /* unifiedNavBar */
 {
 	cursor: pointer;
+}
+
+#u488
+{
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: #BFBFBF;
+	background-color: rgba(127, 127, 127, 0.5);
+	-moz-border-radius: 0px 0px 0px 10px ;
+	-webkit-border-radius: 0px 0px 0px 10px ;
+	-khtml-border-radius: 0px 0px 0px 10px ;
+	border-radius: 0px 0px 0px 10px ;
+	position: relative;
+	-pie-background: rgba(127, 127, 127, 0.5);
 }
 
