--- a/css/the-corrupt.css
+++ b/css/the-corrupt.css
@@ -1,7 +1,7 @@
 .version.the_corrupt /* version checker */
 {
-	color: #000005;
-	background-color: #FCEC71;
+	color: #000018;
+	background-color: #F03370;
 }
 
 .html
@@ -13,14 +13,14 @@
 {
 	z-index: 1;
 	width: 1021px;
-	min-height: 460.85px;
+	min-height: 561.85px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px 19px 19.149999999999977px 20px;
+	padding: 20px 19px 18.149999999999977px 20px;
 }
 
 #ppu459
@@ -113,8 +113,6 @@
 {
 	z-index: 2;
 	width: 1020px;
-	padding-bottom: 2px;
-	margin-top: 1px;
 }
 
 #u482
@@ -122,7 +120,7 @@
 	z-index: 64;
 	width: 101px;
 	margin-right: -10000px;
-	margin-top: 2px;
+	margin-top: 4px;
 	left: 63px;
 }
 
@@ -131,8 +129,8 @@
 	z-index: 5;
 	width: 806px;
 	margin-right: -10000px;
-	margin-top: 61px;
-	left: 214px;
+	margin-top: 67px;
+	left: 213px;
 }
 
 #u248
@@ -217,38 +215,20 @@
 
 #u242
 {
-	width: 273px;
+	width: 253px;
 	top: 42px;
-}
-
-._u243.f3s_mid
-{
-	width: 273px;
-	min-height: 116px;
-}
-
-._u243.f3s_top,._u243.f3s_bot
-{
-	width: 273px;
-	height: 11px;
-}
-
-#u243_position_content
-{
-	margin-top: -11px;
-	margin-bottom: -11px;
 }
 
 #u333
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u333:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -263,19 +243,19 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 79px;
+	left: 69px;
 }
 
 #u345
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u333.MuseMenuActive,#u345:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -290,31 +270,31 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 70px;
+	left: 60px;
 }
 
 #u243,#u332,#u344,#u351
 {
-	width: 273px;
+	width: 253px;
 }
 
 #u354
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u345.MuseMenuActive,#u354:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u354.MuseMenuActive
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -329,7 +309,7 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 61px;
+	left: 51px;
 }
 
 #u313
@@ -394,8 +374,8 @@
 {
 	z-index: 66;
 	width: 1019px;
-	height: 41px;
-	margin-top: 281px;
+	height: 80px;
+	margin-top: 340px;
 }
 
 body
