--- a/css/the-shade.css
+++ b/css/the-shade.css
@@ -1,7 +1,7 @@
 .version.the_shade /* version checker */
 {
-	color: #000004;
-	background-color: #EF99CE;
+	color: #0000EA;
+	background-color: #5C2FED;
 }
 
 .html
@@ -13,14 +13,14 @@
 {
 	z-index: 1;
 	width: 1021px;
-	min-height: 659.85px;
+	min-height: 660.8499999999981px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px 19px 19.149999999999977px 20px;
+	padding: 20px 19px 18.15000000000191px 20px;
 }
 
 #ppu459
@@ -113,8 +113,6 @@
 {
 	z-index: 2;
 	width: 1020px;
-	padding-bottom: 2px;
-	margin-top: 1px;
 }
 
 #u482
@@ -122,7 +120,7 @@
 	z-index: 64;
 	width: 101px;
 	margin-right: -10000px;
-	margin-top: 2px;
+	margin-top: 4px;
 	left: 63px;
 }
 
@@ -131,8 +129,8 @@
 	z-index: 5;
 	width: 806px;
 	margin-right: -10000px;
-	margin-top: 61px;
-	left: 214px;
+	margin-top: 67px;
+	left: 213px;
 }
 
 #u248
@@ -217,38 +215,20 @@
 
 #u242
 {
-	width: 273px;
+	width: 253px;
 	top: 42px;
-}
-
-._u243.f3s_mid
-{
-	width: 273px;
-	min-height: 116px;
-}
-
-._u243.f3s_top,._u243.f3s_bot
-{
-	width: 273px;
-	height: 11px;
-}
-
-#u243_position_content
-{
-	margin-top: -11px;
-	margin-bottom: -11px;
 }
 
 #u333
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u333:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -263,19 +243,19 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 79px;
+	left: 69px;
 }
 
 #u345
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u333.MuseMenuActive,#u345:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -290,31 +270,31 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 70px;
+	left: 60px;
 }
 
 #u243,#u332,#u344,#u351
 {
-	width: 273px;
+	width: 253px;
 }
 
 #u354
 {
-	width: 271px;
+	width: 251px;
 	padding-bottom: 11px;
 	margin-right: -10000px;
 }
 
 #u345.MuseMenuActive,#u354:hover
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u354.MuseMenuActive
 {
-	width: 271px;
+	width: 251px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
 }
@@ -329,7 +309,7 @@
 {
 	margin-right: -10000px;
 	top: 5px;
-	left: 61px;
+	left: 51px;
 }
 
 #u313
@@ -393,16 +373,35 @@
 #u494
 {
 	z-index: 67;
-	width: 1019px;
+	width: 885px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: #BFBFBF;
 	background-color: rgba(127, 127, 127, 0.5);
-	padding-bottom: 16px;
-	margin-top: 2px;
+	margin-top: 3px;
 	position: relative;
+	padding: 5px 41px 56.30000000000018px 93px;
 	-pie-background: rgba(127, 127, 127, 0.5);
+}
+
+#u506
+{
+	z-index: 74;
+	width: 720px;
+	-pie-box-shadow: none;
+	-moz-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	background-color: transparent;
+	margin-left: 56px;
+	position: relative;
+}
+
+#pu326
+{
+	width: 0.01px;
+	margin-top: 14px;
 }
 
 #u326
@@ -419,13 +418,11 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 15px;
-	left: 76px;
 }
 
 #u495-4
 {
-	z-index: 75;
+	z-index: 70;
 	width: 520px;
 	min-height: 474px;
 	background-color: #FFFFFF;
@@ -436,8 +433,8 @@
 	font-family: Times, Times New Roman, Georgia, serif;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 28px;
-	left: 465px;
+	margin-top: 13px;
+	left: 365px;
 	-pie-background: rgba(255, 255, 255, 0.5);
 }
 
@@ -447,27 +444,11 @@
 	padding-left: 10px;
 }
 
-#u438-5
-{
-	z-index: 70;
-	width: 731px;
-	min-height: 116px;
-	background-color: #F9F4E8;
-	color: #8F3345;
-	line-height: 36px;
-	font-size: 30px;
-	text-align: center;
-	font-family: Times, Times New Roman, Georgia, serif;
-	margin-left: 145px;
-	margin-top: 26px;
-	position: relative;
-}
-
 #u488
 {
 	z-index: 66;
 	width: 1019px;
-	height: 41px;
+	height: 80px;
 }
 
 body
