--- a/css/the-forgotten.css
+++ b/css/the-forgotten.css
@@ -1,381 +1,28 @@
 .version.the_forgotten /* version checker */
 {
-	color: #000018;
-	background-color: #F03370;
+	color: #0000F5;
+	background-color: #D9D6B8;
 }
 
 .html
 {
-	background-color: #000000;
+	background-color: #FFFFFF;
 }
 
 #page
 {
 	z-index: 1;
-	width: 1021px;
-	min-height: 561.85px;
+	width: 0px;
+	min-height: 0px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	padding-top: 62px;
+	padding-right: 1060px;
+	padding-bottom: 438px;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px 19px 18.149999999999977px 20px;
-}
-
-#ppu459
-{
-	width: 0.01px;
-}
-
-#pu459
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-left: 170px;
-}
-
-#u459
-{
-	z-index: 3;
-	width: 150px;
-	margin-right: -10000px;
-}
-
-#u460
-{
-	z-index: 56;
-	width: 30px;
-	margin-right: -10000px;
-}
-
-#u466-4
-{
-	z-index: 58;
-	width: 120px;
-	min-height: 7px;
-	margin-right: -10000px;
-	margin-top: 6px;
-	left: 30px;
-}
-
-#u480
-{
-	z-index: 63;
-	width: 150px;
-	height: 30px;
-	margin-right: -10000px;
-}
-
-#u449
-{
-	z-index: 4;
-	width: 150px;
-	padding-bottom: 1px;
-	margin-right: -10000px;
-}
-
-#u440
-{
-	z-index: 50;
-	width: 29px;
-	margin-right: -10000px;
-}
-
-#u450-4
-{
-	z-index: 52;
-	width: 121px;
-	min-height: 15px;
-	margin-right: -10000px;
-	margin-top: 6px;
-	left: 29px;
-}
-
-#u479
-{
-	z-index: 62;
-	width: 150px;
-	height: 30px;
-	margin-right: -10000px;
-	margin-top: 1px;
-}
-
-.ie #u480,.ie #u479
-{
-	background-color: #FFFFFF;
-	opacity: 0.01;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
-	filter: alpha(opacity=1);
-}
-
-#u481
-{
-	z-index: 2;
-	width: 1020px;
-}
-
-#u482
-{
-	z-index: 64;
-	width: 101px;
-	margin-right: -10000px;
-	margin-top: 4px;
-	left: 63px;
-}
-
-#menuu240
-{
-	z-index: 5;
-	width: 806px;
-	margin-right: -10000px;
-	margin-top: 67px;
-	left: 213px;
-}
-
-#u248
-{
-	width: 107px;
-	min-height: 42px;
-	margin-right: -10000px;
-}
-
-#u251
-{
-	width: 105px;
-	padding-bottom: 6px;
-}
-
-#u251:hover
-{
-	width: 105px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u251.MuseMenuActive
-{
-	width: 105px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u253
-{
-	height: 36px;
-	width: 75px;
-	margin-right: -10000px;
-	top: 3px;
-	left: 15px;
-}
-
-#u241
-{
-	width: 258px;
-	min-height: 42px;
-	margin-right: -10000px;
-	left: 109px;
-}
-
-#u244
-{
-	width: 256px;
-	padding-bottom: 6px;
-}
-
-#u244:hover
-{
-	width: 256px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u244:active
-{
-	width: 256px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u244.MuseMenuActive
-{
-	width: 256px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u245
-{
-	height: 36px;
-	width: 227px;
-	margin-right: -10000px;
-	top: 3px;
-	left: 14px;
-}
-
-#u242
-{
-	width: 253px;
-	top: 42px;
-}
-
-#u333
-{
-	width: 251px;
-	padding-bottom: 11px;
-	margin-right: -10000px;
-}
-
-#u333:hover
-{
-	width: 251px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u335-4_clip
-{
-	width: 108px;
-	height: 33px;
-}
-
-#u335-4
-{
-	margin-right: -10000px;
-	top: 5px;
-	left: 69px;
-}
-
-#u345
-{
-	width: 251px;
-	padding-bottom: 11px;
-	margin-right: -10000px;
-}
-
-#u333.MuseMenuActive,#u345:hover
-{
-	width: 251px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u347-4_clip
-{
-	width: 126px;
-	height: 33px;
-}
-
-#u347-4
-{
-	margin-right: -10000px;
-	top: 5px;
-	left: 60px;
-}
-
-#u243,#u332,#u344,#u351
-{
-	width: 253px;
-}
-
-#u354
-{
-	width: 251px;
-	padding-bottom: 11px;
-	margin-right: -10000px;
-}
-
-#u345.MuseMenuActive,#u354:hover
-{
-	width: 251px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u354.MuseMenuActive
-{
-	width: 251px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u356-4_clip
-{
-	width: 144px;
-	height: 33px;
-}
-
-#u356-4
-{
-	margin-right: -10000px;
-	top: 5px;
-	left: 51px;
-}
-
-#u313
-{
-	width: 191px;
-	min-height: 42px;
-	margin-right: -10000px;
-	left: 369px;
-}
-
-#u314
-{
-	width: 189px;
-	padding-bottom: 6px;
-}
-
-#u314.MuseMenuActive
-{
-	width: 189px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u316
-{
-	height: 36px;
-	width: 160px;
-	margin-right: -10000px;
-	top: 3px;
-	left: 14px;
-}
-
-#u275
-{
-	width: 244px;
-	min-height: 42px;
-	margin-right: -10000px;
-	left: 562px;
-}
-
-#u276
-{
-	width: 244px;
-	padding-bottom: 6px;
-}
-
-#u276.MuseMenuActive
-{
-	margin: 0px;
-}
-
-#u278
-{
-	height: 36px;
-	width: 215px;
-	margin-right: -10000px;
-	top: 3px;
-	left: 14px;
-}
-
-#u488
-{
-	z-index: 66;
-	width: 1019px;
-	height: 80px;
-	margin-top: 340px;
 }
 
 body
